# captor

backend/: .gitignore  DATABASE_SCHEMA.md  SETUP.md  pyproject.toml
backend/src/: main.py
backend/src/controllers/: agent_controller.py  auth_controller.py  chat_controller.py  user_controller.py
backend/src/core/: auth.py  config.py  dependencies.py  responses.py  types.py
backend/src/database/: __init__.py  connection.py
backend/src/models/: __init__.py  agent.py  base.py  chat.py  customer.py  data_schema.py  user.py
backend/src/routes/: agent_routes.py  auth_routes.py  chat_routes.py  user_routes.py
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/reset-password/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/app/chat/[id]/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/agents/: page.tsx
frontend/src/app/dashboard/conversations/: page.tsx
frontend/src/components/shared/: ChatLoadingScreen.tsx  ChatLoginModal.tsx
frontend/src/components/shared/CTA/: index.tsx
frontend/src/components/shared/FAQs/: index.tsx
frontend/src/data/: features.ts  howItWorks.ts
frontend/src/examples/: AuthExamples.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: README.md  api.ts
frontend/src/store/: provider.tsx  store.ts
frontend/src/store/slices/: chatSlice.ts
frontend/src/types/: agents.ts  auth.ts  general.ts
frontend/src/utils/: errorHandling.ts
(+15 files in other folders)
